Get people and docs
